--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-12 col-md-8">
+      <div class="col-sm-12">
           <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
     
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
